--- a/docker/stack.yaml
+++ b/docker/stack.yaml
@@ -7,7 +7,9 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: Entrance
     ports:
       - 5432:5432 
 
