--- a/entrance-permit/package.json
+++ b/entrance-permit/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "@daml.js/my-project-name": "file:daml.js/my-project-name-0.1.0",
     "@daml/ledger": "^1.16.0",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
