--- a/canton/remote/cantonA.conf
+++ b/canton/remote/cantonA.conf
@@ -6,16 +6,24 @@ canton {
 
   domains {
     domainA {
-      public-api.port = 13018
-      admin-api.port = 13019
+      public-api {
+        port = 13018
+      }
+      admin-api {
+        port = 13019
+      }
       storage.type = memory
     }
   }
 
   participants {
     buildingA {
-      ledger-api.port = 13011
-      admin-api.port = 13012
+      ledger-api {
+        port = 13011
+      }
+      admin-api {
+        port = 13012
+      }
       storage.type = memory
     }
   }
