--- a/canton/remote/cantonB.conf
+++ b/canton/remote/cantonB.conf
@@ -6,34 +6,50 @@ canton {
 
   remote-domains {
     domainA {
-      public-api.address = 20.56.179.251
-      public-api.port = 13018
-      admin-api.port = 20.56.179.251
-      admin-api.port = 13019
+      public-api {
+        address = 20.56.179.251
+        port = 13018
+      }
+      admin-api {
+        address = 20.56.179.251
+        port = 13019
+      }
     }
   }
 
   domains { 
     domainB {
-      public-api.port = 13028
-      admin-api.port = 13029
+      public-api {
+        port = 13028
+      }
+      admin-api {
+        port = 13029
+      }
       storage.type = memory
     }
   }
 
   remote-participants {
     buildingA {
-      ledger-api.address = 20.56.179.251
-      ledger-api.port = 13011
-      admin-api.address = 20.56.179.251
-      admin-api.port = 13012
+      ledger-api {
+        address = 20.56.179.251
+        port = 13011
+      }
+      admin-api {
+        address = 20.56.179.251
+        port = 13012
+      }
     }
   }
 
   participants {
     buildingB {
-      ledger-api.port = 13021
-      admin-api.port = 13022
+      ledger-api {
+        port = 13021
+      }
+      admin-api {
+        port = 13022
+      }
       storage.type = memory
     }
   }
