--- a/canton/remote/cantonA.conf
+++ b/canton/remote/cantonA.conf
@@ -7,22 +7,35 @@ canton {
   domains {
     domainA {
       public-api {
-        port = 13018
+        port = 9090
       }
       admin-api {
-        port = 13019
+        port = 9091
       }
       storage.type = memory
+    }
+  }
+
+  remote-domains {
+    domainB {
+      public-api {
+        address = 51.124.99.29
+        port = 13028
+      }
+      admin-api {
+        address = 51.124.99.29
+        port = 13029
+      }
     }
   }
 
   participants {
     buildingA {
       ledger-api {
-        port = 13011
+        port = 9092
       }
       admin-api {
-        port = 13012
+        port = 9093
       }
       storage.type = memory
     }
