working config of canton remotes and local nodes

--- a/canton/A/local/cantonALocal.conf
+++ b/canton/A/local/cantonALocal.conf
@@ -4,25 +4,29 @@ canton {
     enable-testing-commands = yes
   }
 
-  domains { 
-    domainB {
+  domains {
+    domainA {
       public-api {
-        port = 13028
+        address = 0.0.0.0
+        port = 13010
       }
       admin-api {
-        port = 13029
+        address = 0.0.0.0
+        port = 13011
       }
       storage.type = memory
     }
   }
 
   participants {
-    buildingB {
+    buildingA {
       ledger-api {
-        port = 13021
+        address = 0.0.0.0
+        port = 13012
       }
       admin-api {
-        port = 13022
+        address = 0.0.0.0
+        port = 13013
       }
       storage.type = memory
     }
