--- a/canton/A/remote/cantonARemote.conf
+++ b/canton/A/remote/cantonARemote.conf
@@ -4,40 +4,47 @@ canton {
     enable-testing-commands = yes
   }
 
-  domains {
+  remote-domains {
     domainA {
       public-api {
-        port = 9090
+        port = 13010
       }
       admin-api {
-        port = 9091
+        port = 13011
       }
-      storage.type = memory
     }
-  }
 
-  remote-domains {
-    domainB {
+    masterDomain {
       public-api {
         address = 51.124.99.29
-        port = 13028
+        port = 13000
       }
       admin-api {
         address = 51.124.99.29
-        port = 13029
+        port = 13001
       }
     }
   }
 
-  participants {
+  remote-participants {
     buildingA {
       ledger-api {
-        port = 9092
+        port = 13012
       }
       admin-api {
-        port = 9093
+        port = 13013
       }
-      storage.type = memory
+    }
+
+    masterBuilding {
+      ledger-api {
+        address = 51.124.99.29
+        port = 13002
+      }
+      admin-api {
+        address = 51.124.99.29
+        port = 13003
+      }
     }
   }
 }
