--- a/daml.yaml
+++ b/daml.yaml
@@ -12,5 +12,5 @@ dependencies:
 - daml-trigger
 sandbox-options:
 - --wall-clock-time
-- --ledgerid=postgres-ledger
+- --ledgerid=daml-sandbox
 start-navigator: true
