--- a/canton/A/local/cantonALocal.conf
+++ b/canton/A/local/cantonALocal.conf
@@ -14,7 +14,8 @@ canton {
         address = 0.0.0.0
         port = 13011
       }
-      storage.type = memory
+      storage = ${domain_postgres.storage}
+      storage.config.properties.databaseName = "domain-db"    
     }
   }
 
@@ -28,7 +29,8 @@ canton {
         address = 0.0.0.0
         port = 13013
       }
-      storage.type = memory
+      storage = ${participant_postgres.storage}
+      storage.config.properties.databaseName = "participant-db"
     }
   }
 }
