add third vm conf

--- a/canton/master/remote/cantonMasterRemote.conf
+++ b/canton/master/remote/cantonMasterRemote.conf
@@ -24,6 +24,17 @@ canton {
         port = 13011
       }
     }
+
+    domainC {
+      public-api {
+        address = 20.50.140.65
+        port = 13020
+      }
+      admin-api {
+        address = 20.50.140.65
+        port = 13021
+      }
+    }
   }
 
   remote-participants {
@@ -44,6 +55,17 @@ canton {
       admin-api {
         address = 20.56.179.251
         port = 13013
+      }
+    }
+
+    buildingC {
+      ledger-api {
+        address = 20.50.140.65
+        port = 13022
+      }
+      admin-api {
+        address = 20.50.140.65
+        port = 13023
       }
     }
   }
